# mujocoMARL

./: .gitignore  README.md  pyproject.toml
configs/algorithm/: a2c.yaml  amp.yaml  ddpg.yaml  ppo.yaml  sac.yaml  td3.yaml  trpo.yaml
configs/experiment/: berkeley_ppo_jax.yaml
configs/robot/: berkeley_humanoid.yaml  booster_t1.yaml  g1.yaml  h1.yaml  op3.yaml
scripts/: benchmark.py  evaluate.py  train.py
src/algorithms/: base.py  off_policy_base.py  on_policy_base.py
src/algorithms/a2c/jax/: a2c.py
src/algorithms/a2c/torch/: a2c.py
src/algorithms/amp/jax/: amp.py
src/algorithms/amp/torch/: amp.py
src/algorithms/ddpg/jax/: ddpg.py
src/algorithms/ddpg/torch/: ddpg.py
src/algorithms/ppo/jax/: ppo.py
src/algorithms/ppo/torch/: ppo.py
src/algorithms/sac/jax/: sac.py
src/algorithms/sac/torch/: sac.py
src/algorithms/td3/jax/: td3.py
src/algorithms/td3/torch/: td3.py
src/algorithms/trpo/jax/: trpo.py
src/algorithms/trpo/torch/: trpo.py
src/buffers/: replay_buffer.py  rollout_buffer.py
src/envs/: wrappers.py
src/networks/jax/: factory.py  mlp.py
src/networks/torch/: mlp.py
src/runners/: benchmark_runner.py  off_policy_runner.py  on_policy_runner.py
src/utils/: checkpoint.py  config.py  logger.py
